--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 /* Main */
 
 .page-content {
-  max-width: 800px;
+  max-width: 900px;
   text-align: left;
   padding: 40px 20px;
   margin: auto;
@@ -51,25 +51,92 @@ code {
   margin: 0 0 15px 0;
 }
 
+/* FAQ */
+
+.question {
+  font-size: 20px; font-weight: 900;
+  letter-spacing: 1px;
+  margin: 20px 0;
+}
+
+/* Forms */
+
+.forms-list {
+  display: flex; flex-direction: column;
+}
+
+.form-link {
+  margin-bottom: 5px;
+}
+
 /* Nav */
 
 .nav-wrap {
+  background-color: #224;
+  width: 100vw; height: 50px;
+}
+
+.nav-links {
+  height: 100%;
   display: flex;
   justify-content: space-between;
-  max-width: 800px;
+  max-width: 900px;
+  margin: auto;
 }
 
 .nav-tab {
   display: flex;
   align-items: center; justify-content: center;
   color: white;
-  background-color: #224;
   text-decoration: none;
   width: 100%;
+}
+
+.nav-tab i {
+  padding-left: 10px;
 }
 
 .nav-tab:hover {
   color: #224;
   background-color: silver;
   transition: .2s;
+}
+
+/* Footer */
+
+.footer {
+  text-align: left;
+  max-width: 900px;
+  margin: auto;
+}
+
+.split-footer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.split-footer .hours {
+  max-width: 300px;
+  padding: 0 20px 0 0;
+}
+
+.day-time {
+  display: flex;
+  justify-content: space-between;
+}
+
+.divide-line {
+  background-color: black;
+  width: 100%; height: 2px;
+  margin: 20px 0;
+}
+
+.address-phone {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.address-phone > a {
+  color: black;
+  text-decoration: none;
 }
