--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 .page-content {
   max-width: 900px;
   text-align: left;
-  padding: 40px 20px;
+  padding: 40px 0;
   margin: auto;
 }
 
@@ -27,121 +27,4 @@ code {
 
 .tab-content {
   text-align: left;
-}
-
-/* About Us */
-
-.bio-container {
-  display: flex;
-}
-
-.bio-container .bio-image {
-  width: 240px; height: 180px;
-  background-image: url('https://res.cloudinary.com/akisiel/image/upload/v1616869449/Office/Staff/jeff_sv4v5p.jpg');
-  background-size: cover;
-  background-position: center;
-  margin-right: 40px;
-}
-
-.bio-container .bio-content {
-  width: 100%;
-}
-
-.bio-container .bio-content h2 {
-  margin: 0 0 15px 0;
-}
-
-/* FAQ */
-
-.question {
-  font-size: 20px; font-weight: 900;
-  letter-spacing: 1px;
-  margin: 20px 0;
-}
-
-/* Forms */
-
-.forms-list {
-  display: flex; flex-direction: column;
-}
-
-.form-link {
-  margin-bottom: 5px;
-}
-
-/* Nav */
-
-.nav-wrap {
-  background-color: #224;
-  width: 100vw; height: 50px;
-}
-
-.nav-links {
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  max-width: 900px;
-  margin: auto;
-}
-
-.nav-tab {
-  display: flex;
-  align-items: center; justify-content: center;
-  color: white;
-  text-decoration: none;
-  width: 100%;
-}
-
-.nav-tab.active {
-  color: #224;
-  background-color: silver;
-}
-
-.nav-tab i {
-  padding-left: 10px;
-}
-
-.nav-tab:hover {
-  color: #224;
-  background-color: silver;
-  transition: .2s;
-}
-
-/* Footer */
-
-.footer {
-  text-align: left;
-  max-width: 900px;
-  margin: auto;
-}
-
-.split-footer {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.split-footer .hours {
-  max-width: 300px;
-  padding: 0 20px 0 0;
-}
-
-.day-time {
-  display: flex;
-  justify-content: space-between;
-}
-
-.divide-line {
-  background-color: black;
-  width: 100%; height: 2px;
-  margin: 20px 0;
-}
-
-.address-phone {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.address-phone > a {
-  color: black;
-  text-decoration: none;
 }
