--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,7 @@
     text-align: left;
     max-width: 900px;
     margin: auto;
+    padding: 0 10px;
   }
   
   .split-footer {
@@ -11,12 +12,20 @@
   
   .split-footer .hours {
     max-width: 300px;
-    padding: 0 20px 0 0;
+    padding: 0 40px 40px 0;
   }
   
   .day-time {
     display: flex;
     justify-content: space-between;
+  }
+
+  .split-footer .map {
+    max-width: 550px;
+  }
+
+  .map iframe {
+    max-width: 90vw;
   }
   
   .divide-line {
@@ -33,4 +42,10 @@
   .address-phone > a {
     color: black;
     text-decoration: none;
+  }
+
+  @media (min-width: 1000px) {
+    .footer {
+      padding: 0;
+    }
   }
