--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 .page-content {
   max-width: 900px;
   text-align: left;
-  padding: 40px 0;
+  padding: 40px 10px;
   margin: auto;
 }
 
@@ -27,4 +27,10 @@ code {
 
 .tab-content {
   text-align: left;
+}
+
+@media (min-width: 1000px) {
+  .page-content {
+    padding: 40px 0;
+  }
 }
